# perpetuo

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  example.py  prep-manylinux-container.sh  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
python/perpetuo/: __init__.py  _perpetuo.pyi  _setup.py
python/perpetuo/_tests/: test_perpetuo.py
src/: lib.rs  log.rs  main.rs  shmem.rs
