[package]
name = "perpetuo"
version = "0.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "perpetuo"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "perpetuo"

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive", "zeroable_atomics"] }
clap = { version = "4.2.2", features = ["derive", "wrap_help"] }
indoc = "2.0.1"
memmap = "0.7.0"
once_cell = "1.17.1"
proc-maps = "0.3.0"
# We need the 3.11 fixes that aren't released yet as of 0.3.14
# py-spy = "0.3.14"
py-spy = { git = "https://github.com/benfred/py-spy.git", rev = "7cbbc015980c5db4d517b62523cf8488296fa2fd" }
pyo3 = { version = "0.18.3", features = ["extension-module", "abi3", "abi3-py39"] }
remoteprocess = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
remoteprocess = { git = "https://github.com/njsmith/remoteprocess", branch = "static-link" }

[build-dependencies]
pyo3-build-config = "*"

[target.'cfg(unix)'.dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "*", features = [
  "Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"
]}
