[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[project]
name = "perpetuo"
version = "0.0.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


